--- a/GameEngine/packages.config
+++ b/GameEngine/packages.config
@@ -4,4 +4,8 @@
   <package id="Assimp.redist" version="3.0.0" targetFramework="native" />
   <package id="glfw" version="3.2.1.5" targetFramework="native" />
   <package id="glm" version="0.9.9" targetFramework="native" />
+  <package id="libiconv" version="1.14.0.11" targetFramework="native" />
+  <package id="libiconv.redist" version="1.14.0.11" targetFramework="native" />
+  <package id="libxml2" version="2.7.8.7" targetFramework="native" />
+  <package id="libxml2.redist" version="2.7.8.7" targetFramework="native" />
 </packages>
