--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="ScriptingManager.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="StaticModel.cpp" />
     <ClCompile Include="SystemManager.cpp" />
@@ -209,6 +210,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="ScriptingManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="StaticModel.h" />
     <ClInclude Include="stb_image.h" />
@@ -233,6 +235,9 @@
     </ProjectReference>
     <ProjectReference Include="..\BulletPhysics\LinearMath\LinearMath.vcxproj">
       <Project>{e84feff4-3162-4800-befc-dd5e20ff315d}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Lua\Lua.vcxproj">
+      <Project>{7fcce334-42b1-4cf3-8f96-04cafe83f7c0}</Project>
     </ProjectReference>
     <ProjectReference Include="..\RapidJSON\RapidJSON.vcxproj">
       <Project>{4e408fff-3aa3-49cf-88ba-903873f1cb44}</Project>
