Started to link the game engine to lua, need to look at how to do vector, quats and matrics in lua

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -222,6 +222,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Vector3.lua" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Useful Links.txt" />
