Can now change the position of objects using lua scripts, going to now create a quaterion and matrix4 lua script, then link those to the program

--- a/Game-Test1/Game-Test1.vcxproj
+++ b/Game-Test1/Game-Test1.vcxproj
@@ -161,6 +161,7 @@
     <None Include="RiggedFragment.frag" />
     <None Include="RiggedVertex.vert" />
     <None Include="TestFragment.frag" />
+    <None Include="TestFunctions.lua" />
     <None Include="TestVertex.vert" />
   </ItemGroup>
   <ItemGroup>
