--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -39,6 +39,12 @@
     <Image Include="Earth_Normal.jpg">
       <Filter>Textures</Filter>
     </Image>
+    <Image Include="concrete.jpg">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="concreteNormal.jpg">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="cube.obj">
@@ -68,12 +74,6 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="packages.config" />
-    <None Include="Level.json">
-      <Filter>Levels</Filter>
-    </None>
-    <Content Include="TestFunctions.lua">
-      <Filter>Scripts</Filter>
-    </Content>
     <Content Include="Vector3.lua">
       <Filter>Scripts</Filter>
     </Content>
@@ -82,6 +82,12 @@
     </None>
     <None Include="Matrix4.lua">
       <Filter>Scripts</Filter>
+    </None>
+    <None Include="PlatformLevel.json">
+      <Filter>Levels</Filter>
+    </None>
+    <None Include="3DLevel.json">
+      <Filter>Levels</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -98,5 +104,10 @@
     <ClInclude Include="TestGameScene.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="PlatformerFunctions.lua">
+      <Filter>Scripts</Filter>
+    </Content>
   </ItemGroup>
 </Project>
