added a new camera to the follow the player doesn't work, started to apply rotations via lua

--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -89,9 +89,15 @@
     <None Include="3DLevel.json">
       <Filter>Levels</Filter>
     </None>
+    <None Include="3DLevelFunctions.lua">
+      <Filter>Scripts</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Object Include="Collectable.obj">
+      <Filter>Models</Filter>
+    </Object>
+    <Object Include="Floor.obj">
       <Filter>Models</Filter>
     </Object>
   </ItemGroup>
