--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="ScriptingManager.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ShadowSystem.cpp" />
     <ClCompile Include="StaticModel.cpp" />
     <ClCompile Include="SystemManager.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -219,6 +220,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ScriptingManager.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="ShadowSystem.h" />
     <ClInclude Include="StaticModel.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="SystemManager.h" />
