--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Camera Manager</Filter>
     </ClCompile>
+    <ClCompile Include="ShadowSystem.cpp">
+      <Filter>Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -332,6 +335,9 @@
     </ClInclude>
     <ClInclude Include="FollowPlayerCamera.h">
       <Filter>Camera Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="ShadowSystem.h">
+      <Filter>Systems</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
