--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -98,6 +98,15 @@
     <None Include="ShadowMapping.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="PointShadow.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="PointShadow.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="PointShadow.geom">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Object Include="Collectable.obj">
