More work on audio, should be able to play audo via a system (needs testing), going to implement audio via lua. Then fully test the audio systems. Also found a potental issue with bullet, appling a velocity with angular limits can result in werid effects.

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="AnimatedModel.cpp" />
     <ClCompile Include="AudioManager.cpp" />
+    <ClCompile Include="AudioSystem.cpp" />
     <ClCompile Include="BulletPhysicsEngine.cpp" />
     <ClCompile Include="CameraManager.cpp" />
     <ClCompile Include="CollisionCuboid.cpp" />
@@ -181,6 +182,7 @@
   <ItemGroup>
     <ClInclude Include="AnimatedModel.h" />
     <ClInclude Include="AudioManager.h" />
+    <ClInclude Include="AudioSystem.h" />
     <ClInclude Include="BulletPhysicsEngine.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraManager.h" />
